# x-frida

./: .gitignore
.claude/: settings.local.json
.github/workflows/: release-android.yml
docs/: RiskEngine 开源设备指纹和风险监测SDK_1779759724.html  RiskEngine 开源设备指纹和风险监测SDK_1779759724.md
subprojects/: capstone.wrap  glib.wrap  json-glib.wrap  libdwarf.wrap  libffi.wrap  libunwind.wrap  nghttp2.wrap  pcre2.wrap  sqlite.wrap  xz.wrap
subprojects/frida-clr/: .gitignore
subprojects/frida-core/: .gitignore  meson.build  meson.options
subprojects/frida-core/lib/base/: socket.vala
subprojects/frida-core/lib/gadget/: gadget-glue.c  gadget.vala
subprojects/frida-core/server/: meson.build  server.vala
subprojects/frida-core/src/: control-service.vala  frida-glue.c
subprojects/frida-core/src/socket/: socket-host-session.vala
subprojects/frida-core/subprojects/: termux-elf-cleaner.wrap
subprojects/frida-core/vapi/: config.vapi
subprojects/frida-gum/: .gitignore  meson.build  meson.options
subprojects/frida-gum/bindings/gumjs/: gumscriptscheduler.c
subprojects/frida-gum/gum/arch-arm64/: gumarm64writer.c  gumarm64writer.h
subprojects/frida-gum/gum/backend-arm64/: guminterceptor-arm64.c
subprojects/frida-gum/gum/backend-posix/: gummemory-posix.c
subprojects/frida-node/: .gitignore
subprojects/frida-python/: .gitignore  setup.py
subprojects/frida-tools/: setup.py
tools/: flatten-submodules.sh
